# kondate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: api.md  design.md  installation.md  requirements.md
scripts/: init_db.py  regenerate_chroma.py
skills/kondate/: README.md  SKILL.md  pyproject.toml
skills/kondate/scripts/: client.py
src/: chroma_service.py  database.py  main.py
src/api/: calendar.py  dishes.py  ingredients.py  nutrition.py  search.py  suggest.py  tags.py
src/models/: __init__.py  calendar.py  dish.py  dish_ingredient.py  dish_tag.py  ingredient.py  recipe.py  tag.py
src/schemas/: calendar.py  dish.py
src/services/: calendar_service.py  dish_service.py  search_service.py  suggest_service.py
src/static/css/: style.css
src/static/js/: app.js
src/templates/: admin.html  base.html  calendar.html  dish_detail.html  dish_form.html  index.html
