[project]
name = "kondate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "fugashi>=1.5.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=3.0.0",
    "sentencepiece>=0.2.0",
    "sqlalchemy>=2.0.48",
    "tokenizers>=0.22.2",
    "unidic-lite>=1.0.8",
    "uvicorn[standard]>=0.41.0",
]
